force-app/main/default/objects/Entity_Contact__c/Entity_Contact__c.object-meta.xml
<CustomObject>
    <label>Entity Contact</label>
    <nameField>
        <label>Contact Person First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entity Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>