force-app/main/default/objects/Entity_Contact__c/fields/Cell_Number__c.field-meta.xml
<CustomField>
    <fullName>Cell_Number__c</fullName>
    <label>Cell Number</label>
    <type>Phone</type>
</CustomField>