force-app/main/default/objects/Entity_Contact__c/fields/Contact_Person_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_Last_Name__c</fullName>
    <label>Contact Person Last Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>