force-app/main/default/objects/Entity_Contact__c/fields/Contract_Person_Middle_Initial__c.field-meta.xml
<CustomField>
    <fullName>Contract_Person_Middle_Initial__c</fullName>
    <label>Contract Person Middle Initial</label>
    <length>15</length>
    <type>Text</type>
</CustomField>