force-app/main/default/objects/Entity_Contact__c/fields/Created_By_MDIRO__c.field-meta.xml
<CustomField>
    <fullName>Created_By_MDIRO__c</fullName>
    <label>Created By</label>
    <length>30</length>
    <type>Text</type>
</CustomField>