force-app/main/default/objects/Entity_Contact__c/fields/Created_TIME_MDIRO__c.field-meta.xml
<CustomField>
    <fullName>Created_TIME_MDIRO__c</fullName>
    <label>Created Time</label>
    <type>DateTime</type>
</CustomField>