force-app/main/default/objects/Entity_Contact__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entity</label>
    <referenceTo>Entity__c</referenceTo>
    <relationshipLabel>Entity Contacts</relationshipLabel>
    <relationshipName>Entity_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>