force-app/main/default/objects/Entity_Contact__c/fields/Entity_Address__c.field-meta.xml
<CustomField>
    <fullName>Entity_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entity Address</label>
    <referenceTo>Entity_Address__c</referenceTo>
    <relationshipLabel>Entity Contacts</relationshipLabel>
    <relationshipName>Entity_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>