force-app/main/default/objects/Entity_Contact__c/fields/Land_Phone__c.field-meta.xml
<CustomField>
    <fullName>Land_Phone__c</fullName>
    <label>Land Phone</label>
    <type>Phone</type>
</CustomField>