force-app/main/default/objects/Entity_Contact__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ROLE_MDIRO_PROVIDER</fullName>
            </value>
            <value>
                <fullName>ROLE_MDIRO_PROVIDER_REP</fullName>
            </value>
            <value>
                <fullName>ROLE_MDIRO_MCO</fullName>
            </value>
            <value>
                <fullName>ROLE_MDIRO_USERADMIN</fullName>
            </value>
            <value>
                <fullName>ROLE_MDIRO_MAXIMUS_SUPPORT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>