force-app/main/default/objects/Entity_Contact__c/fields/Suffix__c.field-meta.xml
<CustomField>
    <fullName>Suffix__c</fullName>
    <label>Suffix</label>
    <length>5</length>
    <type>Text</type>
</CustomField>