force-app/main/default/objects/Entity_Contact__c/fields/TermsAgreedOn__c.field-meta.xml
<CustomField>
    <fullName>TermsAgreedOn__c</fullName>
    <label>TermsAgreedOn</label>
    <type>DateTime</type>
</CustomField>