force-app/main/default/objects/Entity_Contact__c/fields/Updated_Time_MDIRO__c.field-meta.xml
<CustomField>
    <fullName>Updated_Time_MDIRO__c</fullName>
    <label>Updated Time</label>
    <type>DateTime</type>
</CustomField>