force-app/main/default/objects/Entity_Contact__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email_Address__c</columns>
    <columns>Entity__c</columns>
    <columns>Entity_Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>